--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -65,7 +65,7 @@ screen.Fog_Color = fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientR
 screen.Water = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount Water_Top_Layer lightMapDepthEstimation water_blend [Advanced]
 screen.Reflections =  SCREENSPACE_REFLECTIONS SSR_STEPS SUN_MICROFACET_SPECULAR
 screen.Advanced = Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B
-screen.TAA_OPTIONS= TAA FXAA FLICKER_REDUCTION BLEND_FACTOR CLOSEST_VELOCITY NO_CLIP <empty> <empty> TAA_UPSCALING <empty> RENDER_SCALE_Y RENDER_SCALE_X 
+screen.TAA_OPTIONS= TAA FXAA FLICKER_REDUCTION BLEND_FACTOR CLOSEST_VELOCITY NO_CLIP <empty> <empty> TAA_UPSCALING Texture_MipMap_Bias RENDER_SCALE_Y RENDER_SCALE_X 
 
 screen.Lighting= [Torch] [Sky] [Ambient]
 screen.N_Lighting= [N_Torch] [N_Sky] [N_Ambient]
