--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -28,6 +28,7 @@ blend.gbuffers_basic= off
 blend.gbuffers_damagedblock= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
 blend.gbuffers_skytextured=off
 
+alphaTest.gbuffers_terrain=GREATER 0.1
 alphaTest.gbuffers_entities=GREATER 0.1
 alphaTest.gbuffers_weather=false
 alphaTest.gbuffers_water=false
